--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <header class="navbar">
   <div class="left">
     <h1 style="text-transform: capitalize">{{ title }}</h1>
-    <div class="kanban">{{ currentUrl }}</div>
+    <div class="kanban" style="text-transform: capitalize">
+      {{ currentUrl }}
+    </div>
   </div>
   <!-- <div class="middle">
         <div class="search">
