--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -12,9 +12,9 @@
     </div>
   </div>
   <div class="right">
-    <div class="top">
+    <!-- <div class="top">
       Settings / <strong>{{ currentTab?.name }}</strong>
-    </div>
+    </div> -->
 
     <!-- smsm settings -->
     <ng-container *ngIf="currentTab.name === 'SMS Settings'">
@@ -55,7 +55,7 @@
         <div class="ps-left">
           <div class="field">
             <label>Name</label>
-            <span>:</span>
+
             <div class="input">
               <input type="text" placeholder="Enter your name" />
               <svg
@@ -77,7 +77,7 @@
           </div>
           <div class="field">
             <label>Username</label>
-            <span>:</span>
+
             <div class="input">
               <input type="text" placeholder="Enter your username" />
               <svg
@@ -99,7 +99,7 @@
           </div>
           <div class="field">
             <label>Password</label>
-            <span>:</span>
+
             <div class="input">
               <input type="password" placeholder="Password" />
               <svg
@@ -121,7 +121,7 @@
           </div>
           <div class="field">
             <label>User ID</label>
-            <span>:</span>
+
             <div class="input">
               <input type="text" placeholder="Enter your user id" />
               <svg
@@ -145,6 +145,18 @@
         <div class="ps-right">
           <img src="../../../assets/profile-settings.png" alt="" />
         </div>
+      </div>
+      <div class="imp-banner">
+        <div><img src="../../../assets/info-icon.png" /> Important Note:</div>
+        <p>
+          Please note that “not sent” , might be because target is not valid
+          mobile or international number or your settings are configured not be
+          send this Message type by SMS.
+        </p>
+        <p>
+          Device sending is limited to avoid bans , these limits are gradually
+          reduced to mitigate that risk.
+        </p>
       </div>
     </ng-container>
   </div>
