--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    background-color: white;
+    background-color: transparent;
     padding: 1.5rem 2rem 0 2rem;
     position: sticky;
     top: 0;
