--- a/src/app/components/reports-device/reports-device.component.css
+++ b/src/app/components/reports-device/reports-device.component.css
@@ -106,7 +106,7 @@ p {
     border-bottom: 1px solid #E0E0E0;
     padding-bottom: .5rem;
     position: relative;
-    height: 180px;
+    height: 240px;
     min-width: 400px;
 }
 
@@ -129,7 +129,6 @@ p {
     border-radius: 8.98px;
     background: rgba(46, 188, 150, 0.20);
     display: flex;
-    gap: .7rem;
     align-items: center;
     padding:5px 10px;
     cursor: pointer;
@@ -141,7 +140,7 @@ p {
 
 .duration_picker span {
     color: #2EBC96;
-    font-size:10px;
+    font-size:14px;
     font-family: "DM Sans";
     font-style: normal;
     font-weight: 500;
@@ -177,7 +176,7 @@ p {
 }
 
 .b-left {
-    width: 110px;
+    width: 120px;
 }
 
 .bl-top {
@@ -236,6 +235,8 @@ p {
     align-items: center;
     gap: .5rem;
     margin-top: 2.5rem;
+    font-size: 14px;
+    white-space: nowrap;
 }
 
 .check {
