--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-own">
-  <div *ngIf="showBanner" class="top">
+  <!-- <div *ngIf="showBanner" class="top">
     <div class="top_t">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -41,7 +41,7 @@
         />
       </svg>
     </button>
-  </div>
+  </div> -->
   <div class="table-top">
     <div class="tt-left">
       <button
@@ -157,8 +157,13 @@
       <div class="t-item">
         <div class="ti-item">No</div>
         <div class="ti-item">User Mobile Number</div>
-        <div class="ti-item">WhatsApp</div>
-        <div class="ti-item">SMS</div>
+        <div class="ti-item">
+          <img style="height: 24px" src="../../../assets/Pencil.png" />
+          WhatsApp
+        </div>
+        <div class="ti-item">
+          <img style="height: 24px" src="../../../assets/Pencil.png" /> SMS
+        </div>
         <div class="ti-item">Actions</div>
       </div>
       <div
