--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -386,7 +386,7 @@ strong {
 }
 
 .menu p {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     margin-bottom: 0;
 }
@@ -458,7 +458,7 @@ strong {
 }
 
 .reports {
-    height: 458px;
+    height: 344px;
     width: 100%;
 }
 
@@ -670,7 +670,7 @@ strong {
 }
 
 .note-banner p {
-    font-size: 18px;
+    font-size: 14px;
     color: #737791;
     text-align: center;
 }
@@ -1014,11 +1014,18 @@ strong {
 }
 
 .a_table {
-    min-width: 1100px;
     display: flex;
     flex-direction: column;
     gap: .9rem;
 }
+
+.a_table tr {
+    width: 100%;
+}
+
+/* .a_table tr th {
+    width: 100px;
+} */
 
 .at_item {
     display: flex;
@@ -1032,48 +1039,35 @@ strong {
     padding: 1rem;
 } */
 
-.at_item div:nth-child(1) {
-    width: 220px;
-    text-align: center;
-}
-
-.at_item div:nth-child(2) {
-    width: 100px;
-    text-align: center;
-}
-
-.at_item div:nth-child(3) {
-    width: 100px;
-    text-align: center;
-}
-
-.at_item div:nth-child(4) {
-    width: 120px;
-    text-align: center;
-}
-
-.at_item div:nth-child(5) {
-    width: 70px;
-    text-align: center;
-}
-
-.at_item div:nth-child(6) {
-    width: 60px;
-    text-align: center;
-}
-
-
-
-.at_item div:last-child {
-    width: 150px;
-    white-space: nowrap;        /* Prevents text from wrapping */
-  overflow: hidden;           /* Hides text that overflows */
-  text-overflow: ellipsis;
+.a_table th,
+.a_table td {
+  padding: 8px;
   text-align: center;
 }
 
+/* Set specific column widths */
+.a_table th:nth-child(1),
+.a_table td:nth-child(1) { width: 210px; min-width: 210px;} /* Created At */
+.a_table th:nth-child(2),
+.a_table td:nth-child(2) { width: 120px; min-width: 120px;} /* Target Type */
+.a_table th:nth-child(3),
+.a_table td:nth-child(3) { width: 180px; min-width: 180px;} /* Target */
+.a_table th:nth-child(4),
+.a_table td:nth-child(4) { width: 130px; min-width: 130px;} /* Message Type */
+.a_table th:nth-child(5),
+.a_table td:nth-child(5) { width: 120px; min-width: 120px;} /* Sent Via */
+.a_table th:nth-child(6),
+.a_table td:nth-child(6) { width: 100px; min-width: 100px;} /* Status */
+.a_table th:nth-child(7),
+.a_table td:nth-child(7) { width: 300px;         /* Set a fixed width */
+    max-width: 300px;     /* Ensure it doesn't exceed this width */
+    overflow: hidden;     /* Hide overflowing text */
+    text-overflow: ellipsis; /* Show "..." at the end */
+    white-space: nowrap;  /* Keep text on one line */
+    display: block;  } /* Messages */
+
 .msg-details {
-    height: 458px;
+    height: 364px;
     width: 600px;
 
     border-radius: 20px;
@@ -1090,10 +1084,10 @@ strong {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
     align-items: center;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px !important;
 }
 
 .msg-details-sec * {
@@ -1104,7 +1098,7 @@ strong {
     display: inline-block;
     width: 100%;
     text-align: right;
-    padding-right: 20px;
+    padding-right: 5px;
     color: black;
     font-weight: 600;
 }
@@ -1117,18 +1111,20 @@ strong {
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.10);
     width: 90%;
-    height: 45px;
+    height: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #7D819B;
     font-size: 12px;
-    padding-left: 20px;
+    padding-left: 5px;
 }
 
 .device-btn-container {
     display: flex;
-    gap: 10px;
+    justify-content: end;
+    gap: 5px;
+    padding-bottom: 10px;
 }
 
 .device-btn-container button {
@@ -1156,4 +1152,48 @@ strong {
     width: 120px;
     right: 25px;
     top: 15px;
+}
+
+.whatsapp-banner-con {
+    position: relative;
+    height: 0;
+}
+
+.whatsapp-banner {
+    display: flex;
+    gap: 15px;
+    background: #E3F4F7;
+    border-radius: 10px;
+    padding: 15px 10px;
+    width: 450px;
+}
+
+.whatsapp-banner img {
+    width: 135px;
+}
+
+.whatsapp-banner p {
+    color: #7B7B7B;
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.whatsapp-banner span {
+    color: #7B7B7B;
+    display: inline-block;
+}
+
+.filter-btn-con {
+    display: flex;
+    width: 100%;
+    justify-content: end;
+    gap: 10px;
+}
+
+.filter-btn-con button {
+    padding: 10px;
+    background: transparent;
+    color: white;
+    border-radius: 10px;
+    border: 1px solid white;
 }
