--- a/src/app/components/reports-device/reports-device.component.html
+++ b/src/app/components/reports-device/reports-device.component.html
@@ -85,7 +85,7 @@
   <div class="bot">
     <div class="b-left">
       <div class="bl-top">
-        <h1>137.5K</h1>
+        <h1>{{ trackDriverTotalMsg }}</h1>
         <span>messages</span>
       </div>
       <div class="bl-total">
